Fixed a number of layout issues and fixed #29

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -59,3 +59,8 @@ div.course_name, .course_image {
 .syllabus {
 	min-height:500px;
 }
+
+label[for^="skill_list_"], label[for^="subject_list_"] {
+	margin: 0;
+	padding: 0;
+}
